# First_Project-Django

./: README.md  pyproject.toml
mysite/myapp/: admin.py  forms.py  models.py  urls.py  views.py
mysite/myapp/migrations/: 0001_initial.py  0002_taks.py  0003_rename_taks_task.py  0004_task_done.py
mysite/myapp/static/style/: style.css
mysite/myapp/templates/: helloWorld.html  index.html
mysite/myapp/templates/layouts/: nav.html
mysite/myapp/templates/projects/: ProjectsWeb.html  Projects_Create.html  details.html
mysite/myapp/templates/tasks/: TasksWeb.html  Tasks_Create.html
mysite/mysite/: settings.py
